Fix z-index issue with include snaps

--- a/static/sass/_snapcraft_l-application.scss
+++ b/static/sass/_snapcraft_l-application.scss
@@ -156,6 +156,6 @@
     right: 0;
     top: 0;
     width: 100%;
-    z-index: 999;
+    z-index: 10;
   }
 }
